--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="./assets/img/urku-ico.svg">
-  <link rel="stylesheet" href="./assets/css/aurora-pack.min.css">
-  <link rel="stylesheet" href="./assets/css/aurora-theme-base.min.css">
-  <link rel="stylesheet" href="./assets/css/urku.css">
+  <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
+  <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
+  <link rel="stylesheet" href="assets/css/urku.css">
 </head>
-<body class="top-fixed">
-  <app-root></app-root>
+<body class="ae-container-fluid rk-main">
 
-  <script src="./assets/js/svg4everybody.min.js"></script>  
+  <app-root class=""></app-root>
+
+  <script src="assets/js/svg4everybody.min.js"></script>  
   <script>svg4everybody();</script>
+
 </body>
 </html>
